[package]
name = "sdl-ast"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Site Deploy Language AST"
repository = "https://github.com/GalAster/awsl-rs"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
num = "0.3"
bigdecimal = "0.2"
thiserror = "1.0"

[dev-dependencies]

[features]
default = []
